# toyflow

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
examples/: test_batchrun.py  test_dag.py  test_lock.py  test_pq.py
src/toyflow/: __init__.py  job.py  launcher.py  resource.py  scheduler.py
src/toyflow/callbacks/: __init__.py  base.py  logging_callback.py  rich_callback.py  web_callback.html  web_callback.py
src/toyflow/utils/: json_util.py  python_env.py
tests/: test_basic.py
toyflow/: __init__.py
toyflow/core/: batchrun.py  batchrun_v2.py  task_node.py
toyflow/dag/: __init__.py  dag.py
toyflow/resources/: __init__.py  resources.py
toyflow/utils/: __init__.py  avail_cuda.py  constants.py  logger.py
