[tool.poetry]
authors = ["yujiepan <yujiepan@no-email.example.com>"]
description = "Lightweight flow execution tool."
keywords = ["toyflow"]
license = "MIT"
name = "toyflow"
readme = "README.md"
repository = "https://github.com/yujiepan-work/toyflow"

[tool.poetry.dependencies]
flask = "*"
pandas = "*"
python = ">=3.8"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[tool.poetry.include]
# Add this section to include the HTML file
include = [
  {path = "src/toyflow/callbacks/web_callback.html", format = "text"},
]
[tool.pylint.'MESSAGES CONTROL']
disable = """
    missing-class-docstring,
    missing-module-docstring,
    missing-function-docstring,
    logging-fstring-interpolation,
    unused-import,
"""
max-line-length = 120
[tool.isort]
include_trailing_comma = true
known_local_folder = ["."]
known_nncf = ["nncf", "optimum"]
known_torch = ["torch"]
known_toy = ["toyflow", "toytools"]
line_length = 100
multi_line_output = 3
no_lines_before = ['nncf']
sections = [
  'FUTURE',
  'STDLIB',
  'TORCH',
  'NNCF',
  'THIRDPARTY',
  'FIRSTPARTY',
  'LOCALFOLDER',
  'TOY',
]
[tool.autopep8]
ignore = [
  "E402",
]
max-line-length = 120
[tool.black]
line-length = 120
